--- a/kj/index.html
+++ b/kj/index.html
@@ -232,7 +232,7 @@
   		<script type="text/javascript" src="js/test/listTest.js"></script>
   		 <script type="text/javascript" src="js/tool/app.js"></script>
   		<script type="text/javascript" src="js/tool/widget.js"></script>
-  		<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+  		<!--<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>-->
 
 
   		<script src="plugins/mobiscroll/date/js/mobiscroll.core.js" type="text/javascript"></script>
